--- a/CODE_JETT/package.json
+++ b/CODE_JETT/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "child_process": "^1.0.2",
     "codemirror": "^5.65.2",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "i": "^0.3.7",
     "particles.js": "^2.0.0",
     "react": "^17.0.2",
@@ -18,7 +19,7 @@
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
-    "socket.io": "^4.4.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
